--- a/moodle/Base.lproj/Main.storyboard
+++ b/moodle/Base.lproj/Main.storyboard
@@ -480,7 +480,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="KNj-BZ-oqN">
                                 <rect key="frame" x="20" y="505" width="375" height="233"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Gbq-1r-zOn">
                                     <size key="itemSize" width="116" height="116"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -508,6 +508,13 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="#" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rf9-R3-VM0" userLabel="Rating Label">
+                                <rect key="frame" x="209" y="139" width="11" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="PGQ-gi-jYs"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -518,6 +525,7 @@
                         <outlet property="dateLabel" destination="gjK-hv-EWI" id="FhU-94-XCX"/>
                         <outlet property="detailLabel" destination="Dww-bh-yDc" id="I5V-0Y-ZP7"/>
                         <outlet property="onDateLabel" destination="rPB-j0-GW8" id="3sS-Qf-OdE"/>
+                        <outlet property="ratingLabel" destination="Rf9-R3-VM0" id="eSP-Ir-jzy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Oki-3M-KJi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
