--- a/moodle/Base.lproj/Main.storyboard
+++ b/moodle/Base.lproj/Main.storyboard
@@ -390,64 +390,82 @@
             <point key="canvasLocation" x="1439" y="2956"/>
         </scene>
         <!--Graphs-->
-        <scene sceneID="XUH-Eg-v0k">
+        <scene sceneID="xYx-uA-Iuj">
             <objects>
-                <viewController title="Graphs" id="6oL-VH-ofy" customClass="VisualizationsViewController" customModule="moodle" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ood-24-syP">
+                <viewController title="Graphs" id="U14-9a-Bk5" customClass="VisualizationsViewController" customModule="moodle" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0uR-mR-KNV">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aRm-Oj-br2" customClass="LineChartView" customModule="Charts">
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nRR-bE-A6q" customClass="LineChartView" customModule="Charts">
                                 <rect key="frame" x="62" y="182" width="304" height="238"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
-                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k1f-rN-dvT" customClass="PieChartView" customModule="Charts">
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6fO-Up-1co" customClass="PieChartView" customModule="Charts">
                                 <rect key="frame" x="62" y="470" width="304" height="268"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mmu-Vy-Ok9">
-                                <rect key="frame" x="127.66666666666667" y="776" width="172.66666666666663" height="31"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C4I-y6-rRa">
+                                <rect key="frame" x="127.66666666666667" y="755" width="172.66666666666663" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Generate Data (debug)"/>
                                 <connections>
-                                    <action selector="generateDataPressed:" destination="yjr-aL-963" eventType="touchUpInside" id="mlP-TD-dhP"/>
-                                    <action selector="generateDataPressed:" destination="6oL-VH-ofy" eventType="touchUpInside" id="qo8-BJ-YaR"/>
+                                    <action selector="generateDataPressed:" destination="U14-9a-Bk5" eventType="touchUpInside" id="chr-ir-dHO"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s8y-6c-5Od">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dLS-iS-as3">
                                 <rect key="frame" x="357" y="48.999999999999993" width="43" height="30.666666666666664"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrow.clockwise" catalog="system"/>
                                 <connections>
-                                    <action selector="refreshPressed:" destination="6oL-VH-ofy" eventType="touchUpInside" id="jKk-j8-74v"/>
+                                    <action selector="refreshPressed:" destination="U14-9a-Bk5" eventType="touchUpInside" id="3JS-qj-BLS"/>
                                 </connections>
                             </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="pt0-Jh-iAA">
+                                <rect key="frame" x="50" y="794" width="328" height="32"/>
+                                <segments>
+                                    <segment title="1w"/>
+                                    <segment title="1m"/>
+                                    <segment title="3m"/>
+                                    <segment title="6m"/>
+                                    <segment title="1y"/>
+                                    <segment title="ALL"/>
+                                </segments>
+                                <connections>
+                                    <action selector="intervalDidChange:" destination="U14-9a-Bk5" eventType="valueChanged" id="OtS-CX-v3b"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="ZxZ-jw-nzb"/>
+                        <viewLayoutGuide key="safeArea" id="jOf-9q-lbJ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="aRm-Oj-br2" firstAttribute="centerX" secondItem="Mmu-Vy-Ok9" secondAttribute="centerX" id="1bC-DT-GRA"/>
-                            <constraint firstItem="k1f-rN-dvT" firstAttribute="top" secondItem="aRm-Oj-br2" secondAttribute="bottom" constant="50" id="3vk-WN-vZc"/>
-                            <constraint firstItem="aRm-Oj-br2" firstAttribute="centerX" secondItem="ZxZ-jw-nzb" secondAttribute="centerX" id="8Vb-6h-LF8"/>
-                            <constraint firstItem="aRm-Oj-br2" firstAttribute="leading" secondItem="k1f-rN-dvT" secondAttribute="leading" id="9Nh-8x-TfN"/>
-                            <constraint firstItem="k1f-rN-dvT" firstAttribute="centerX" secondItem="ZxZ-jw-nzb" secondAttribute="centerX" id="Jde-Te-hwU"/>
-                            <constraint firstItem="aRm-Oj-br2" firstAttribute="top" secondItem="ZxZ-jw-nzb" secondAttribute="top" constant="138" id="Kjo-ov-TbR"/>
-                            <constraint firstItem="Mmu-Vy-Ok9" firstAttribute="top" secondItem="k1f-rN-dvT" secondAttribute="bottom" constant="38" id="OXe-mi-Etd"/>
-                            <constraint firstItem="k1f-rN-dvT" firstAttribute="top" secondItem="Ood-24-syP" secondAttribute="top" constant="470" id="PBa-Jb-L0v"/>
-                            <constraint firstAttribute="bottom" secondItem="k1f-rN-dvT" secondAttribute="bottom" constant="188" id="R81-hb-TGq"/>
-                            <constraint firstItem="s8y-6c-5Od" firstAttribute="top" secondItem="ZxZ-jw-nzb" secondAttribute="top" constant="5" id="XdB-0d-2Bb"/>
-                            <constraint firstItem="aRm-Oj-br2" firstAttribute="leading" secondItem="ZxZ-jw-nzb" secondAttribute="leading" constant="62" id="eST-FB-BgN"/>
-                            <constraint firstItem="ZxZ-jw-nzb" firstAttribute="trailing" secondItem="s8y-6c-5Od" secondAttribute="trailing" constant="28" id="qfI-Xx-FO3"/>
+                            <constraint firstItem="nRR-bE-A6q" firstAttribute="centerX" secondItem="C4I-y6-rRa" secondAttribute="centerX" id="0yq-eh-xGA"/>
+                            <constraint firstItem="6fO-Up-1co" firstAttribute="centerX" secondItem="jOf-9q-lbJ" secondAttribute="centerX" id="17Y-MB-h7y"/>
+                            <constraint firstItem="pt0-Jh-iAA" firstAttribute="centerX" secondItem="0uR-mR-KNV" secondAttribute="centerX" id="5Ru-fu-EDx"/>
+                            <constraint firstItem="dLS-iS-as3" firstAttribute="top" secondItem="jOf-9q-lbJ" secondAttribute="top" constant="5" id="8Qj-Dj-7KE"/>
+                            <constraint firstItem="nRR-bE-A6q" firstAttribute="top" secondItem="jOf-9q-lbJ" secondAttribute="top" constant="138" id="HtE-Qk-Z50"/>
+                            <constraint firstItem="C4I-y6-rRa" firstAttribute="top" secondItem="6fO-Up-1co" secondAttribute="bottom" constant="17" id="Iim-Ai-jGG"/>
+                            <constraint firstItem="nRR-bE-A6q" firstAttribute="leading" secondItem="jOf-9q-lbJ" secondAttribute="leading" constant="62" id="LZJ-mK-ECf"/>
+                            <constraint firstItem="pt0-Jh-iAA" firstAttribute="leading" secondItem="jOf-9q-lbJ" secondAttribute="leading" constant="50" id="M5C-1w-ias"/>
+                            <constraint firstItem="6fO-Up-1co" firstAttribute="top" secondItem="0uR-mR-KNV" secondAttribute="top" constant="470" id="PXJ-b2-yct"/>
+                            <constraint firstItem="pt0-Jh-iAA" firstAttribute="top" secondItem="C4I-y6-rRa" secondAttribute="bottom" constant="8" symbolic="YES" id="YfU-bB-myo"/>
+                            <constraint firstItem="6fO-Up-1co" firstAttribute="top" secondItem="nRR-bE-A6q" secondAttribute="bottom" constant="50" id="fSN-RL-Kjp"/>
+                            <constraint firstItem="jOf-9q-lbJ" firstAttribute="trailing" secondItem="dLS-iS-as3" secondAttribute="trailing" constant="28" id="h4t-JL-zCP"/>
+                            <constraint firstItem="jOf-9q-lbJ" firstAttribute="trailing" secondItem="pt0-Jh-iAA" secondAttribute="trailing" constant="50" id="hFg-wg-tmk"/>
+                            <constraint firstItem="nRR-bE-A6q" firstAttribute="centerX" secondItem="jOf-9q-lbJ" secondAttribute="centerX" id="jh0-4U-u2M"/>
+                            <constraint firstAttribute="bottom" secondItem="6fO-Up-1co" secondAttribute="bottom" constant="188" id="kUl-wc-OcF"/>
+                            <constraint firstItem="nRR-bE-A6q" firstAttribute="leading" secondItem="6fO-Up-1co" secondAttribute="leading" id="nT9-zX-Gcx"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Graphs" image="chart.xyaxis.line" catalog="system" id="quL-ar-BxY"/>
-                    <navigationItem key="navigationItem" id="lFn-WS-xr4"/>
+                    <tabBarItem key="tabBarItem" title="Graphs" image="chart.xyaxis.line" catalog="system" id="WAL-43-WTn"/>
+                    <navigationItem key="navigationItem" id="bV6-KV-hOS"/>
                     <connections>
-                        <outlet property="lineChart" destination="aRm-Oj-br2" id="CUM-8S-PSY"/>
-                        <outlet property="pieChart" destination="k1f-rN-dvT" id="tTq-JC-62r"/>
+                        <outlet property="intervalSegmentedControl" destination="pt0-Jh-iAA" id="QKj-Zx-HKA"/>
+                        <outlet property="lineChart" destination="nRR-bE-A6q" id="XRl-Rk-jSy"/>
+                        <outlet property="pieChart" destination="6fO-Up-1co" id="RTw-g4-1bw"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Lfg-3W-3Db" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wyV-Fp-NWW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2426.0869565217395" y="2956.4732142857142"/>
         </scene>
@@ -465,7 +483,7 @@
                         <segue destination="bBK-dp-LO3" kind="relationship" relationship="viewControllers" id="ODY-CL-lmq"/>
                         <segue destination="XbZ-6V-F2X" kind="relationship" relationship="viewControllers" id="PsO-cB-kwp"/>
                         <segue destination="yjr-aL-963" kind="relationship" relationship="viewControllers" id="cu5-dF-jYa"/>
-                        <segue destination="6oL-VH-ofy" kind="relationship" relationship="viewControllers" id="VnR-d9-0fg"/>
+                        <segue destination="U14-9a-Bk5" kind="relationship" relationship="viewControllers" id="bcE-3n-12Y"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5XS-nc-UF1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
